--- a/sabores-sorvete/index.html
+++ b/sabores-sorvete/index.html
@@ -10,6 +10,7 @@
     <h1>Escreva um sabor de sorvete (só funciona com chocolate e flocos)</h1> <br>
     <input type="text" id="sabor-sorvete">
     <h2 id="mensagem"> </h2>
+    <button id="botaoModo">Mudar Cores</button>
 
     <script src="sabores.js"></script>
 </body>
